--- a/Echoes/Echoes/Pages/_LoginPartial.cshtml
+++ b/Echoes/Echoes/Pages/_LoginPartial.cshtml
@@ -20,6 +20,6 @@ else
 {
     <ul class="nav navbar-nav navbar-right">
         <li><a asp-page="/Account/Register">Register</a></li>
-        <li><a asp-page="/Account/Login">Log in</a></li>
+        <li><a asp-page="/Account/Login">Admin Login</a></li>
     </ul>
 }
