--- a/Echoes/Echoes/Pages/_Layout.cshtml
+++ b/Echoes/Echoes/Pages/_Layout.cshtml
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Echoes</title>
+    <title>@ViewData["Title"] - Markovian Echoes</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -15,6 +15,9 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
+
+    <link href="~/lib/jquery-textillate/assets/animate.css" rel="stylesheet">
+    <link href="~/lib/jquery-textillate/assets/style.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -26,10 +29,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">Echoes</a>
+                <a asp-page="/Index" class="navbar-brand">Markovian Echoes</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a asp-page="/Existence">EXIST</a></li>
+                    <li> | </li>
                     <li><a asp-page="/Index">Home</a></li>
                     <li><a asp-page="/About">About</a></li>
                     <li><a asp-page="/Contact">Contact</a></li>
@@ -42,13 +47,18 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Echoes</p>
+            <p>&copy; 2018 - SwiftAusterity</p>
         </footer>
     </div>
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+
+        <script src="~/lib/jquery-textillate/assets/jquery.fittext.js"></script>
+        <script src="~/lib/jquery-textillate/assets/jquery.lettering.js"></script>
+        <script src="~/lib/jquery-textillate/jquery.textillate.js"></script>
+
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
@@ -64,6 +74,11 @@
                 crossorigin="anonymous"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
+
+        <script src="~/lib/jquery-textillate/assets/jquery.fittext.js"></script>
+        <script src="~/lib/jquery-textillate/assets/jquery.lettering.js"></script>
+        <script src="~/lib/jquery-textillate/jquery.textillate.js"></script>
+
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
