--- a/Echoes/Echoes/Pages/Contact.cshtml
+++ b/Echoes/Echoes/Pages/Contact.cshtml
@@ -6,11 +6,12 @@
 <h2>@ViewData["Title"]</h2>
 
 <div style="margin-top: 50px;">
-    <p data-in-effect="fadeIn">Markovian Echoes is made and maintained by SwiftAusterity for the MUD Coders Guild 2018 Gamejam. Exist in the guild and share your echoes with us, https://mudcoders.slack.com/</p>
+    <p data-in-effect="fadeIn">Markovian Echoes is made and maintained by SwiftAusterity for the MUD Coders Guild 2018 Gamejam. Exist in the guild and share your echoes with us, </p>
+    <a href="https://mudcoders.slack.com/">Exist with us</a>
 </div>
 
 @section Scripts {
     <script type="text/javascript">
-        $('p').each.textillate({ in: { effect: 'fadeIn' } });
+        $('p').textillate({ in: { effect: 'fadeIn' } });
     </script>
 }
