--- a/Echoes/Echoes/wwwroot/css/site.css
+++ b/Echoes/Echoes/wwwroot/css/site.css
@@ -39,6 +39,29 @@ body {
     position: absolute;
 }
 
+.parserOutput {
+    color: white;
+    height: 100%;
+    width: 100%;
+    margin-top: 15px;
+    overflow-y: hidden;
+    padding: 5px;
+    vertical-align: bottom;
+    text-align: left;
+}
+
+.parserInput {
+    background-color: black;
+    color: lightgreen;
+    width: 100%;
+    max-width: inherit;
+    font-family: Courier New, Courier, monospace
+}
+
+a#clearInput {
+    color: red;
+}
+
 ul.animated-list {
     display: inline;
     padding: unset;
