Functional existence controller, just need the playername now. also hack for mvc might fix later

--- a/Echoes/Echoes/Views/Existence/Index.cshtml
+++ b/Echoes/Echoes/Views/Existence/Index.cshtml
@@ -1,15 +1,12 @@
 ﻿@model Echoes.Web.Models.ExistenceModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Purgatory";
+    Layout = "~/Pages/_Layout.cshtml";
 }
 
-<div class="textParserClient">
-    <div id="OutputArea" class="parserOutput"></div>
-    <form method="post">
-        @Html.DisplayFor(model => model.Input)
-    </form>
-</div>
 <div>
-    <a href="./existence" id="clientReload">Blink</a>
+    <span>You stand in purgatory. You might want to exist somewhere.</span>
 </div>
+
+
