--- a/Echoes/Echoes/wwwroot/css/site.css
+++ b/Echoes/Echoes/wwwroot/css/site.css
@@ -62,6 +62,51 @@ a#clearInput {
     color: red;
 }
 
+ul.nav li input {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    color: black;
+}
+
+a#personaLabel {
+    color: red;
+}
+
+    a#personaLabel.button {
+        text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+        color: yellow;
+        display: inline-block;
+        text-decoration: none;
+        font-weight: 200;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
+        padding: 0.5em 1em;
+        background-image: -moz-linear-gradient(top, white, #9d9d9d);
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#9d9d9d));
+        background-image: -webkit-linear-gradient(top, white, #9d9d9d);
+        background-image: -o-linear-gradient(top, white, #9d9d9d);
+        background-image: linear-gradient(to bottom, white, #9d9d9d);
+        background-repeat: repeat-x;
+        -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
+        -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
+        box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
+        font-size: 14px;
+        line-height: 1.42857143;
+        white-space: nowrap;
+        -ms-touch-action: manipulation;
+        touch-action: manipulation;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        margin: 9px;
+    }
+
+        a#personaLabel.button.activated {
+            color: green;
+        }
+
 ul.animated-list {
     display: inline;
     padding: unset;
