--- a/Echoes/Echoes/Pages/_Layout.cshtml
+++ b/Echoes/Echoes/Pages/_Layout.cshtml
@@ -39,7 +39,7 @@
                     <li><a asp-page="/About">About</a></li>
                     <li><a asp-page="/Contact">Contact</a></li>
                 </ul>
-                @await Html.PartialAsync("_LoginPartial")
+                @await Html.PartialAsync("./_LoginPartial.cshtml")
             </div>
         </div>
     </nav>
@@ -60,6 +60,7 @@
         <script src="~/lib/jquery-textillate/jquery.textillate.js"></script>
 
         <script src="~/js/js-cookie.js"></script>
+        <script src="~/js/moment.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
@@ -81,6 +82,7 @@
         <script src="~/lib/jquery-textillate/jquery.textillate.js"></script>
 
         <script src="~/js/js-cookie.js"></script>
+        <script src="~/js/moment.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
@@ -88,14 +90,10 @@
 
     <script type="text/javascript">
         $('#personaLabel').click(function () {
-            var $this = $(this);
-
             if ($this.hasClass('activated')) {
-                $this.removeClass('activated');
-                Cookies.set('persona', '');
+                forgetPersona();
             } else {
-                $this.addClass('activated');
-                Cookies.set('persona', $('#PersonaName').val());
+                remeberPersona($('#PersonaName').val());
             }
 
             return false;
@@ -107,12 +105,14 @@
             var currentValue = this.value;
 
             $labels.addClass('button');
+            //Always blank the persona if changes are made
+            forgetPersona();
 
             ///Deleting
             if (key == 8 || key == 46) {
                 if (currentValue.length <= 1) {
                     $labels.removeClass('button');
-               } 
+                }
             }
         });
     </script>
