big refactor to switch away from 4.6.2 libs

--- a/Echoes/Echoes/Views/Existence/Index.cshtml
+++ b/Echoes/Echoes/Views/Existence/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Pages/_Layout.cshtml";
 }
 
-<div>
-    <span>You stand in purgatory. You might want to exist somewhere.</span>
+<div style="padding-top: 50px;">
+    <span>You stand in purgatory. You might want to exist <a href="/Existence/The_Warren">somewhere</a>.</span>
 </div>
 
