--- a/Echoes/Echoes/Views/Existence/Place.cshtml
+++ b/Echoes/Echoes/Views/Existence/Place.cshtml
@@ -12,7 +12,7 @@
     </form>
 </div>
 <div>
-    <a href="./existence" id="clientReload">Blink</a>
+    <a href="." id="clientReload">Blink</a>
 </div>
 
 @section Scripts {
