--- a/Echoes/Echoes/wwwroot/css/site.css
+++ b/Echoes/Echoes/wwwroot/css/site.css
@@ -33,6 +33,7 @@ body {
     margin-top: 50px;
     position: relative;
     overflow-y: hidden;
+    overflow-x: visible;
 }
 
 .text-output {
@@ -45,9 +46,11 @@ body {
     width: 100%;
     margin-top: 15px;
     overflow-y: hidden;
+    overflow-x: visible;
     padding: 5px;
     vertical-align: bottom;
     text-align: left;
+    z-index: 999;
 }
 
 .parserInput {
