new ui elements, new ux for speaking/acting, made a user and migrated the localdb

--- a/Echoes/Echoes/Pages/About.cshtml
+++ b/Echoes/Echoes/Pages/About.cshtml
@@ -23,6 +23,8 @@
 
 @section Scripts {
     <script type="text/javascript">
+        $('#aboutLink').addClass('selected');
+
         $('p').textillate({ in: { effect: 'fadeIn' } });
         $('h3').textillate({ in: { effect: 'fadeIn' }, initialDelay: 1500 });
     </script>
