--- a/Echoes/Echoes/Pages/Contact.cshtml
+++ b/Echoes/Echoes/Pages/Contact.cshtml
@@ -12,6 +12,8 @@
 
 @section Scripts {
     <script type="text/javascript">
+        $('#contactLink').addClass('selected');
+
         $('p').textillate({ in: { effect: 'fadeIn' } });
     </script>
 }
