--- a/Echoes/Echoes/Pages/Index.cshtml
+++ b/Echoes/Echoes/Pages/Index.cshtml
@@ -26,6 +26,8 @@
 
 @section Scripts {
     <script type="text/javascript">
+        $('#homeLink').addClass('selected');
+
         PositionOutput(undefined, $('.textParserClient'), $('.animate-1'), {
             in: { effect: 'fadeIn' }
         });
