--- a/Echoes/Echoes/Views/Existence/Index.cshtml
+++ b/Echoes/Echoes/Views/Existence/Index.cshtml
@@ -9,3 +9,8 @@
     <span>You stand in purgatory. You might want to exist <a href="/Existence/The_Warren">somewhere</a>.</span>
 </div>
 
+@section Scripts {
+    <script type="text/javascript">
+        $('#existLink').addClass('selected');
+    </script>
+}
