--- a/Echoes/Echoes/Pages/Account/Login.cshtml
+++ b/Echoes/Echoes/Pages/Account/Login.cshtml
@@ -48,5 +48,9 @@
 </div>
 
 @section Scripts {
-    @await  Html.PartialAsync("_ValidationScriptsPartial")
+    <script type="text/javascript">
+        $('#loginLink').addClass('selected');
+    </script>
+
+    @await Html.PartialAsync("_ValidationScriptsPartial")
 }
