--- a/Echoes/Echoes/wwwroot/css/site.css
+++ b/Echoes/Echoes/wwwroot/css/site.css
@@ -3,6 +3,9 @@ body {
     padding-bottom: 20px;
 }
 
+.navbar-brand {
+    padding: 20px;
+}
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
@@ -25,6 +28,11 @@ body {
 /* QR code generator */
 #qrCode {
     margin: 15px;
+}
+
+.selected {
+    background-image: linear-gradient(to bottom, lightgreen, lightgreen);
+    background-clip: content-box;
 }
 
 .textParserClient {
@@ -61,21 +69,39 @@ body {
     font-family: Courier New, Courier, monospace
 }
 
-a#clearInput {
+#parserControls a {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+}
+
+    #parserControls a img {
+        width: 32px;
+        height: 32px;
+        padding-top: 5px;
+    }
+
+ul.nav li a img {
+    width: 28px;
+    height: 28px;
+}
+
+#clearInput {
     color: red;
 }
 
 ul.nav li input {
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 20px;
     color: black;
 }
 
-a#personaLabel {
+#personaLabel {
     color: red;
+    padding-top: 22px;
+    margin-right: 15px;
 }
 
-    a#personaLabel.button {
+    #personaLabel.button {
         text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
         color: yellow;
         display: inline-block;
@@ -103,23 +129,22 @@ a#personaLabel {
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
-        margin: 9px;
+        margin-top: 15px;
+        margin-right: 15px;
     }
 
-        a#personaLabel.button.activated {
+        #personaLabel.button.activated {
             color: green;
         }
 
 ul.animated-list {
     display: inline;
     padding: unset;
-    margin: unset;
 }
 
     ul.animated-list li {
         display: inline;
         padding: unset;
-        margin: unset;
     }
 
 /* Hide/rearrange for smaller screens */
