--- a/Echoes/Echoes/Pages/Admin/Dashboard.cshtml
+++ b/Echoes/Echoes/Pages/Admin/Dashboard.cshtml
@@ -4,5 +4,30 @@
     ViewData["Title"] = "Dashboard";
 }
 
-<h2>Dashboard</h2>
-
+<div style="padding-top: 50px;">
+    <h4>Live Data</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>Places:</dt>
+        <dd>
+            @Model.PlaceCount
+        </dd>
+        <dt>Things:</dt>
+        <dd>
+            @Model.ThingCount
+        </dd>
+        <dt>Personas:</dt>
+        <dd>
+            @Model.PersonaCount
+        </dd>
+    </dl>
+    <h4>World State</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>Do stuff</dt>
+        <dd>
+            @Html.ActionLink("Backup World", "BackupWorld", "Admin", new { @class = "btn btn-default save" })
+            @Html.ActionLink("Suspend and Restore World", "RestoreWorld", "Admin", new { @class = "btn btn-default caution" })
+        </dd>
+    </dl>
+</div>
