--- a/Echoes/Echoes/wwwroot/css/site.css
+++ b/Echoes/Echoes/wwwroot/css/site.css
@@ -137,6 +137,20 @@ ul.nav li input {
             color: green;
         }
 
+textarea {
+    max-width: 750px;
+    max-height: 500px;
+    color: black;
+}
+
+    textarea.logDisplay {
+        width: 100%;
+        height: 500px;
+        max-height: 1000px;
+        max-width: 1000px;
+        margin-top: 20px;
+    }
+
 ul.animated-list {
     display: inline;
     padding: unset;
