added markov engine, and a new interface factory (pattern) but caching is borked and inventory is borked

--- a/Echoes/Echoes/Views/Existence/Place.cshtml
+++ b/Echoes/Echoes/Views/Existence/Place.cshtml
@@ -24,7 +24,7 @@
     <div>
         <h3>Whomst</h3>
         <div>
-            @foreach (var persona in Model.CurrentPlace.PersonaInventory)
+            @foreach (var persona in Model.CurrentPlace.GetPersonas())
             {
                 <p>@String.Join(" ", persona.RenderToLocation())</p>
             }
