--- a/Echoes/Echoes/Pages/_Layout.cshtml
+++ b/Echoes/Echoes/Pages/_Layout.cshtml
@@ -93,11 +93,27 @@
     @RenderSection("Scripts", required: false)
 
     <script type="text/javascript">
+        if (Cookies.get('tutorialMode') !== undefined) {
+            $('#tutorialCheck').prop("checked", Cookies.get('tutorialMode') === 'on');
+        }
+
+        $('#tutorialCheck').click(function () {
+            if ($('#tutorialCheck').prop("checked")) {
+                Cookies.set('tutorialMode', 'on');
+            } else {
+                Cookies.set('tutorialMode', 'off');
+            }
+        });
+
         if (Cookies.get('persona') != undefined && Cookies.get('persona') != '' && $('#PersonaName').val() == '') {
             $('#PersonaName').val(Cookies.get('persona'));
             rememberPersona($('#PersonaName').val());
             $('#personaLabel').addClass('button');
+        } else {
+            Tutorial($('#PersonaName'), 'Choose who you want to be.');
         }
+
+        Tutorial($('#tutorialCheckLabel'), 'Turn me off at any time.');
 
         $('#PersonaName').val(Cookies.get('persona'));
 
