--- a/Echoes/Echoes/Views/Existence/Index.cshtml
+++ b/Echoes/Echoes/Views/Existence/Index.cshtml
@@ -5,12 +5,14 @@
     Layout = "~/Pages/_Layout.cshtml";
 }
 
-<div style="padding-top: 50px;">
+<div style="padding-top: 100px;">
     <span>You stand in purgatory. You might want to exist <a href="/Existence/The_Warren">somewhere</a>.</span>
 </div>
 
 @section Scripts {
     <script type="text/javascript">
         $('#existLink').addClass('selected');
+
+        Tutorial($('a.navbar-brand'), 'Use the URI to change where you are.');
     </script>
 }
