--- a/Echoes/Echoes/Views/Existence/Place.cshtml
+++ b/Echoes/Echoes/Views/Existence/Place.cshtml
@@ -62,13 +62,13 @@
         Tutorial($('.parserClientRight'), "Who has been here.");
         Tutorial($('.parserClientLeft'), "Here is where.");
 
-        Kinesis_Text('@Model.Errors', $('.parserOutput'), { Orientation: 'normal', FadeOnSweep: true }, { 'color': 'red' }, { in: { effect: 'fadeIn' } });
+        Kinesis_Text('@Model.Errors', $('.parserOutput'), { FadeOnSweep: true }, { 'color': 'red' }, { in: { effect: 'fadeIn' } });
 
         var timer = 0;
        @foreach (var record in Model.NewToYou)
        {
           <text>
-        Kinesis_Text('@record.Observance', $('.parserOutput'), { Orientation: 'normal', FadeOnSweep: true }, undefined, { initialDelay: timer });
+        Kinesis_Text('@record.Observance', $('.parserOutput'), { Orientation: { direction: 'random', FadeOnSweep: true }, undefined, { initialDelay: timer });
             timer += 1250;
           </text>
        }
